# nvgx-test

./: Cargo.toml  README.md  copy_runtime.py
examples_src/: demo-bezier.rs  demo-clock.rs  demo-cutout.rs  demo-draw.rs  demo-square.rs  demo-text.rs
fps/: demo-cutout (OpenGL).csv  demo-cutout (WGPU).csv  demo-cutout-inst (OpenGL).csv  demo-cutout-inst (WGPU).csv  plt.py
src/: face_landmark.rs  faceland.rs  main.rs  perf.rs  utils.rs
src/demo/: mod.rs  ogl.rs  wgpu.rs
src/yolov5_face/: mod.rs  result.rs
