[package]
name = "nvgx-test"
version = "0.1.0"
edition = "2024"

[features]
default = ["wgpu", "wirelines"]
wgpu = ["nvgx-wgpu"]
ogl = ["nvgx-ogl"]
wirelines = ["nvgx/wirelines"]
example-single-inst = []
save-fps = []

[dependencies]
nvgx = "0.3"
nvgx-wgpu = { version = "0.3", optional = true }
nvgx-ogl = { version = "0.3", optional = true }
cfg-if = "1.0.0"
anyhow = "1.0.98"
chrono = "0.4.41"
rand = "0.9.1"
slab = "0.4.9"
lazy_static = "1.5.0"
winit = "0.30.10"
raw-window-handle = "0.6.2"
wgpu = "25.0.0"
pollster = "0.4.0"
gl = "0.14.0"
glutin-winit = "0.5.0"
glutin = "0.32.3"
kamera = "0.0.2"
