[package]
name = "nvgx-test"
version = "0.1.0"
edition = "2024"

[features]
default = ["ogl", "wirelines"]
wgpu = ["nvgx-wgpu"]
ogl = ["nvgx-ogl"]
wirelines = ["nvgx/wirelines"]
example-single-inst = []
save-fps = []

[dependencies]
nvgx = { version = "0.3.3" }
nvgx-wgpu = { version = "0.3", optional = true }
nvgx-ogl = { version = "0.3", optional = true }
cfg-if = "1.0.0"
anyhow = "1.0.98"
chrono = "0.4.41"
rand = "0.9.1"
slab = "0.4.9"
lazy_static = "1.5.0"
winit = "0.30.10"
raw-window-handle = "0.6.2"
wgpu = "25.0.0"
pollster = "0.4.0"
gl = "0.14.0"
glutin-winit = "0.5.0"
glutin = "0.32.3"
kamera = "0.0.2"
image = "0.25.6"
fast_image_resize = { version = "5.1.4", features = ["image"] }
ort = { path = "../ort", features = ["load-dynamic"] }
num-traits = "0.2.19"
ndarray = { version = "0.16.1", features = ["rayon"] }
rayon = "1.10.0"
tracy-client = "0.18.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
